--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Halloween Octubre 🎃</title>
+  <title>Halloween🎃</title>
   <style>
     body {
       background-color: #000;
@@ -42,13 +42,13 @@
   <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <h1>Calendario de Películas - Octubre</h1>
+  <h1>All Hallows’ Eve</h1>
 
   <div class="dia">
-    <h2>Día 1 — Horror Sobrenatural</h2>
+    <h2>a haon  — Horror Sobrenatural</h2>
     <p><strong>Película:</strong> El Conjuro 2</p>
     <p class="sinopsis">Una familia londinense es acosada por un espíritu maligno. Los Warren deben intervenir antes de que el mal los consuma.</p>
-    <iframe src="https://www.youtube.com/embed/your_trailer_id" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com//embed/cuDBjj_Gs0M?si=UEBeM8gCXQKCbXDs" allowfullscreen></iframe>
   </div>
 
   <div class="dia">
