--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <h2>a haon  — Horror Sobrenatural</h2>
     <p><strong>Película:</strong> El Conjuro 2</p>
     <p class="sinopsis">Una familia londinense es acosada por un espíritu maligno. Los Warren deben intervenir antes de que el mal los consuma.</p>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/cuDBjj_Gs0M?si=UEBeM8gCXQKCbXDs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/cuDBjj_Gs0M?si=UEBeM8gCXQKCbXDs" allowfullscreen></iframe>
   </div>
 
   <div class="dia">
